doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Michel\Documents\Java\Kantine
-d
C:\Users\Michel\Documents\Java\Kantine\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Michel\Documents\Java\Kantine\Persoon.java
<---- end of javadoc command ---->
Loading source file C:\Users\Michel\Documents\Java\Kantine\Persoon.java...
C:\Users\Michel\Documents\Java\Kantine\Persoon.java:29: error: '.class' expected
        setGeboortejaar(int nieuweDag,int nieuweMaand,int nieuweJaar);
                            ^
C:\Users\Michel\Documents\Java\Kantine\Persoon.java:29: error: ';' expected
        setGeboortejaar(int nieuweDag,int nieuweMaand,int nieuweJaar);
                                     ^
C:\Users\Michel\Documents\Java\Kantine\Persoon.java:29: error: <identifier> expected
        setGeboortejaar(int nieuweDag,int nieuweMaand,int nieuweJaar);
                                                      ^
C:\Users\Michel\Documents\Java\Kantine\Persoon.java:29: error: not a statement
        setGeboortejaar(int nieuweDag,int nieuweMaand,int nieuweJaar);
                                                          ^
C:\Users\Michel\Documents\Java\Kantine\Persoon.java:29: error: ';' expected
        setGeboortejaar(int nieuweDag,int nieuweMaand,int nieuweJaar);
                                                                    ^
5 errors
